--- a/gdzc/src/main/res/values/dimens.xml
+++ b/gdzc/src/main/res/values/dimens.xml
@@ -13,8 +13,10 @@
     <dimen name="title">20sp</dimen>
     <dimen name="subheading">16sp</dimen>
 
+    <dimen name="dimen_0">0dp</dimen>
     <dimen name="dimen_5">5dp</dimen>
     <dimen name="dimen_10">10dp</dimen>
+    <dimen name="dimen_15">15dp</dimen>
     <dimen name="dimen_20">20dp</dimen>
     <dimen name="dimen_50">50dp</dimen>
     <dimen name="dimen_160">160dp</dimen>
