--- a/gdzc/src/main/res/layout/adapter_zcdj_item.xml
+++ b/gdzc/src/main/res/layout/adapter_zcdj_item.xml
@@ -19,6 +19,14 @@
         <TextView
             style="@style/CommonText"
             android:layout_width="wrap_content"
+            android:paddingRight="@dimen/dimen_10"
+            android:text="*"
+            android:textColor="@color/red"
+            android:visibility="@{viewModel.djbt.equals(`1`)?View.VISIBLE:View.GONE}"/>
+
+        <TextView
+            style="@style/CommonText"
+            android:layout_width="wrap_content"
             android:paddingBottom="@dimen/dimen_10"
             android:paddingRight="@dimen/dimen_10"
             android:paddingTop="@dimen/dimen_10"
@@ -28,9 +36,8 @@
             style="@style/CommonText"
             android:layout_width="wrap_content"
             android:paddingRight="@dimen/dimen_10"
-            android:text="*"
-            android:textColor="@color/red"
-            android:visibility="@{viewModel.djbt.equals(`1`)?View.VISIBLE:View.GONE}"/>
+            android:layout_gravity="center"
+            android:text=":"/>
 
         <EditText
             android:id="@+id/et"
