--- a/gdzc/src/main/res/layout/adapter_zcdj_item.xml
+++ b/gdzc/src/main/res/layout/adapter_zcdj_item.xml
@@ -19,14 +19,6 @@
         <TextView
             style="@style/CommonText"
             android:layout_width="wrap_content"
-            android:paddingRight="@dimen/dimen_10"
-            android:text="*"
-            android:textColor="@color/red"
-            android:visibility="@{viewModel.djbt.equals(`1`)?View.VISIBLE:View.GONE}"/>
-
-        <TextView
-            style="@style/CommonText"
-            android:layout_width="wrap_content"
             android:paddingBottom="@dimen/dimen_10"
             android:paddingRight="@dimen/dimen_10"
             android:paddingTop="@dimen/dimen_10"
@@ -36,8 +28,9 @@
             style="@style/CommonText"
             android:layout_width="wrap_content"
             android:paddingRight="@dimen/dimen_10"
-            android:layout_gravity="center"
-            android:text=":"/>
+            android:text="*"
+            android:textColor="@color/red"
+            android:visibility="@{viewModel.djbt.equals(`1`)?View.VISIBLE:View.GONE}"/>
 
         <EditText
             android:id="@+id/et"
@@ -45,6 +38,7 @@
             android:layout_weight="1"
             android:background="@drawable/bottom_border"
             android:hint="@{viewModel.tsnr}"
+            android:inputType="@{viewModel.isNum?InputType.TYPE_NUMBER_FLAG_DECIMAL|InputType.TYPE_CLASS_NUMBER:InputType.TYPE_CLASS_TEXT}"
             android:maxLines="1"
             android:text="@={viewModel.content}"
             android:visibility="@{viewModel.isEditAble?View.VISIBLE:View.GONE}"/>
