--- a/gdzc/src/main/res/layout/activity_zcdj_edit.xml
+++ b/gdzc/src/main/res/layout/activity_zcdj_edit.xml
@@ -24,6 +24,7 @@
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rv_zcbg"
+                    android:background="@color/white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
