--- a/gdzc/src/main/res/layout/activity_zcdj_cch_edit.xml
+++ b/gdzc/src/main/res/layout/activity_zcdj_cch_edit.xml
@@ -4,7 +4,7 @@
 
     <data>
         <variable name="appbar" type="com.gdzc.base.AppBar"/>
-        <variable name="data" type="com.gdzc.zcdj.model.CchBean.Cch"/>
+        <variable name="data" type="com.gdzc.zcdj.zcdj.model.CchBean.Cch"/>
     </data>
 
     <RelativeLayout android:layout_width="wrap_content"
