--- a/gdzc/src/main/res/layout/fragment_zcdj.xml
+++ b/gdzc/src/main/res/layout/fragment_zcdj.xml
@@ -3,8 +3,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <import type="android.view.View"/>
         <variable name="viewModel" type="com.gdzc.zcdj.zcdj.viewmodel.ZcdjViewModel"/>
-        <import type="me.tatarka.bindingcollectionadapter.LayoutManagers"/>
     </data>
 
     <RelativeLayout android:layout_width="wrap_content"
@@ -22,7 +22,8 @@
                 <LinearLayout android:id="@+id/form_layout"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
-                              android:orientation="vertical">
+                              android:orientation="vertical"
+                              android:visibility="@{viewModel.isShow?View.GONE:View.VISIBLE}">
                     <LinearLayout android:id="@+id/layout_fl"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
@@ -87,12 +88,51 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rv_zcdj"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layoutManager="@{LayoutManagers.linear()}"/>
+                    android:layout_height="match_parent"/>
 
-                <include android:id="@+id/img_layout"
-                         layout="@layout/adapter_zcdj_img_item"
-                         android:visibility="gone"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/margin_horizontal"
+                    android:visibility="@{viewModel.isShow?View.VISIBLE:View.GONE}">
+
+                    <LinearLayout
+                        android:id="@+id/llayout_zc"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/dimen_10"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+                        <ImageView android:id="@+id/iv_zc"
+                                   android:layout_width="match_parent"
+                                   android:layout_height="100dp"
+                                   android:background="@drawable/rect_radius_white"
+                                   android:onClick="@{viewModel.imageUploadZc}"
+                                   android:src="@mipmap/place_holder"/>
+                        <TextView style="@style/CommonText"
+                                  android:layout_gravity="center_horizontal"
+                                  android:layout_marginTop="@dimen/dimen_10"
+                                  android:text="资产照片"/>
+                    </LinearLayout>
+
+                    <LinearLayout android:id="@+id/llayout_fp"
+                                  android:layout_width="0dp"
+                                  android:layout_height="wrap_content"
+                                  android:layout_weight="1"
+                                  android:orientation="vertical">
+                        <ImageView android:id="@+id/iv_fp"
+                                   android:layout_width="match_parent"
+                                   android:layout_height="100dp"
+                                   android:background="@drawable/rect_radius_white"
+                                   android:onClick="@{viewModel.imageUploadFp}"
+                                   android:src="@mipmap/place_holder"/>
+                        <TextView style="@style/CommonText"
+                                  android:layout_gravity="center_horizontal"
+                                  android:layout_marginTop="@dimen/dimen_10"
+                                  android:text="发票照片"/>
+                    </LinearLayout>
+                </LinearLayout>
 
                 <android.support.v7.widget.AppCompatButton
                     android:id="@+id/bt_confirm"
@@ -101,7 +141,7 @@
                     android:layout_margin="@dimen/dimen_10"
                     android:text="保存"
                     android:textColor="@color/white"
-                    android:visibility="gone"
+                    android:visibility="@{viewModel.isShow?View.VISIBLE:View.GONE}"
                     app:clickCommand="@{viewModel.saveCommand}"/>
             </LinearLayout>
         </com.pulltofresh.PullToRefreshNestedScrollView>
