--- a/gdzc/src/main/res/layout/activity_zcdj_cch_edit.xml
+++ b/gdzc/src/main/res/layout/activity_zcdj_cch_edit.xml
@@ -4,10 +4,11 @@
 
     <data>
         <variable name="appbar" type="com.gdzc.base.AppBar"/>
-        <variable name="data" type="com.gdzc.zcdj.zcdj.model.CchBean.Cch"/>
+        <variable name="data" type="com.gdzc.zcdj.cch.model.CchBean.Cch"/>
     </data>
 
     <RelativeLayout android:layout_width="wrap_content"
+                    android:background="@color/white"
                     android:layout_height="match_parent">
         <include
             android:id="@+id/layout_appbar"
@@ -24,10 +25,9 @@
                               android:layout_height="wrap_content"
                               android:padding="12dp">
                     <TextView style="@style/CommonText"
-                              android:text="资产编号："/>
+                              android:text="资 产  编 号："/>
                     <TextView style="@style/CommonText"
                               android:layout_weight="1"
-                              android:gravity="right"
                               android:paddingLeft="@dimen/dimen_10"
                               android:text="@{data.zcbh}"/>
                 </LinearLayout>
@@ -36,10 +36,9 @@
                               android:layout_height="wrap_content"
                               android:padding="12dp">
                     <TextView style="@style/CommonText"
-                              android:text="单据号："/>
+                              android:text="单    据    号："/>
                     <TextView style="@style/CommonText"
                               android:layout_weight="1"
-                              android:gravity="right"
                               android:paddingLeft="@dimen/dimen_10"
                               android:text="@{data.djh}"/>
                 </LinearLayout>
@@ -48,10 +47,9 @@
                               android:layout_height="wrap_content"
                               android:padding="12dp">
                     <TextView style="@style/CommonText"
-                              android:text="标识："/>
+                              android:text="标            识："/>
                     <TextView style="@style/CommonText"
                               android:layout_weight="1"
-                              android:gravity="right"
                               android:paddingLeft="@dimen/dimen_10"
                               android:text="@{data.bs}"/>
                 </LinearLayout>
@@ -60,10 +58,9 @@
                               android:layout_height="wrap_content"
                               android:padding="12dp">
                     <TextView style="@style/CommonText"
-                              android:text="输入人："/>
+                              android:text="输    入    人："/>
                     <TextView style="@style/CommonText"
                               android:layout_weight="1"
-                              android:gravity="right"
                               android:paddingLeft="@dimen/dimen_10"
                               android:text="@{data.srr}"/>
                 </LinearLayout>
@@ -75,7 +72,6 @@
                               android:text="领用单位号："/>
                     <TextView style="@style/CommonText"
                               android:layout_weight="1"
-                              android:gravity="right"
                               android:paddingLeft="@dimen/dimen_10"
                               android:text="@{data.lydwh}"/>
                 </LinearLayout>
@@ -84,10 +80,10 @@
                               android:layout_height="wrap_content"
                               android:padding="12dp">
                     <TextView style="@style/CommonText"
-                              android:text="出厂号："/>
+                              android:text="出    厂    号："/>
                     <EditText style="@style/CommonEdit"
                               android:layout_weight="1"
-                              android:gravity="right"
+                              android:background="@drawable/bottom_border"
                               android:padding="0dp"
                               android:hint="请输入出厂号"
                               android:paddingLeft="@dimen/dimen_10"
@@ -98,12 +94,12 @@
                               android:layout_height="wrap_content"
                               android:padding="12dp">
                     <TextView style="@style/CommonText"
-                              android:text="领用人："/>
+                              android:text="领    用    人："/>
                     <EditText style="@style/CommonEdit"
                               android:layout_weight="1"
-                              android:gravity="right"
                               android:padding="0dp"
                               android:hint="请输入领用人"
+                              android:background="@drawable/bottom_border"
                               android:paddingLeft="@dimen/dimen_10"
                               android:text="@={data.of_lyr}"/>
                 </LinearLayout>
@@ -112,11 +108,11 @@
                               android:layout_height="wrap_content"
                               android:padding="12dp">
                     <TextView style="@style/CommonText"
-                              android:text="人员编号："/>
+                              android:text="人 员  编 号："/>
                     <EditText style="@style/CommonEdit"
                               android:layout_weight="1"
-                              android:gravity="right"
                               android:hint="请输入人员编号"
+                              android:background="@drawable/bottom_border"
                               android:padding="0dp"
                               android:paddingLeft="@dimen/dimen_10"
                               android:text="@={data.of_rybh}"/>
@@ -129,9 +125,9 @@
                               android:text="存放地编号："/>
                     <EditText style="@style/CommonEdit"
                               android:layout_weight="1"
-                              android:gravity="right"
                               android:padding="0dp"
                               android:hint="请输入存放地编号"
+                              android:background="@drawable/bottom_border"
                               android:paddingLeft="@dimen/dimen_10"
                               android:text="@={data.of_cfdbh}"/>
                 </LinearLayout>
@@ -143,8 +139,8 @@
                               android:text="存放地名称："/>
                     <EditText style="@style/CommonEdit"
                               android:layout_weight="1"
-                              android:gravity="right"
                               android:hint="请输入存放地名称"
+                              android:background="@drawable/bottom_border"
                               android:padding="0dp"
                               android:paddingLeft="@dimen/dimen_10"
                               android:text="@={data.of_cfdmc}"/>
