--- a/gdzc/src/main/res/layout/activity_main.xml
+++ b/gdzc/src/main/res/layout/activity_main.xml
@@ -27,7 +27,12 @@
 
         </LinearLayout>
 
-        <include layout="@layout/layout_nav"
-                 app:viewModel="@{viewModel}"/>
+        <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:headerLayout="@layout/nav_header_home"
+            app:menu="@menu/nav_drawer"/>
     </android.support.v4.widget.DrawerLayout>
 </layout>
