--- a/gdzc/src/main/res/layout/activity_splash.xml
+++ b/gdzc/src/main/res/layout/activity_splash.xml
@@ -1,17 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:bind="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-        <variable name="viewModel" type="com.gdzc.splash.viewmodel.SplashViewModel"/>
-    </data>
-
-
-    <ImageView
-        android:id="@+id/image_splash"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/image_spalsh"/>
+        tools:context=".splash.view.SplashActivity  ">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/image_spalsh"/>
+
+        <com.dl7.tag.TagView
+            android:id="@+id/tag_skip"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="30dp"
+            android:text="跳过 3"
+            app:tag_auto_check="false"
+            app:tag_bg_color="#00000000"
+            app:tag_border_color="@android:color/white"
+            app:tag_mode="normal"
+            app:tag_press_feedback="false"
+            app:tag_shape="arc"
+            app:tag_text_color="@android:color/white"/>
+    </FrameLayout>
 
 </layout>
