--- a/gdzc/src/main/res/values/dimens.xml
+++ b/gdzc/src/main/res/values/dimens.xml
@@ -19,6 +19,7 @@
     <dimen name="dimen_15">15dp</dimen>
     <dimen name="dimen_20">20dp</dimen>
     <dimen name="dimen_50">50dp</dimen>
+    <dimen name="dimen_60">60dp</dimen>
     <dimen name="dimen_160">160dp</dimen>
 
 </resources>
