--- a/gdzc/src/main/res/values/styles.xml
+++ b/gdzc/src/main/res/values/styles.xml
@@ -16,6 +16,13 @@
         <item name="actionMenuTextColor">#ffffff</item>
     </style>
 
+    <style name="SplashTheme" parent="AppTheme">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+
     <style name="AppTheme.AppComEdit">
         <item name="colorControlNormal">@color/gray</item>
         <item name="colorControlActivated">@color/colorPrimary</item>
